force-app/main/default/objects/Case/fields/Business_Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Insurance_Type__c</fullName>
    <label>Business Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workers&apos; Compensation</fullName>
            </value>
            <value>
                <fullName>General Liability</fullName>
            </value>
            <value>
                <fullName>Umbrella</fullName>
            </value>
            <value>
                <fullName>Cyber Liability</fullName>
            </value>
            <value>
                <fullName>Business Owners Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>