force-app/main/default/objects/Case/fields/HR_Service__c.field-meta.xml
<CustomField>
    <fullName>HR_Service__c</fullName>
    <label>HR Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Should have these values:</fullName>
            </value>
            <value>
                <fullName>HR Packages</fullName>
            </value>
            <value>
                <fullName>HR Consulting</fullName>
            </value>
            <value>
                <fullName>Employee Onboarding</fullName>
            </value>
            <value>
                <fullName>Hiring Services</fullName>
            </value>
            <value>
                <fullName>AI-Assisted Recruiting</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>