force-app/main/default/objects/Case/fields/Innovation_Category__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Category__c</fullName>
    <label>Innovation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grid Reliability &amp; Resilience</fullName>
            </value>
            <value>
                <fullName>Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Technology &amp; Research</fullName>
            </value>
            <value>
                <fullName>Electrication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>