force-app/main/default/objects/Case/fields/Payroll_Service__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Service__c</fullName>
    <label>Payroll Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll Packages</fullName>
            </value>
            <value>
                <fullName>Small Business Payroll</fullName>
            </value>
            <value>
                <fullName>Midsize to Enterprise Payroll</fullName>
            </value>
            <value>
                <fullName>Switch Payroll Companies</fullName>
            </value>
            <value>
                <fullName>Payroll Tax Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>