force-app/main/default/objects/Case/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Small Appliances</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Air &amp; Water</fullName>
            </value>
            <value>
                <fullName>Filters &amp; Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>