force-app/main/default/objects/Case/fields/Service_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Support_Type__c</fullName>
    <label>Service &amp; Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Service Agreements</fullName>
            </value>
            <value>
                <fullName>Part Orders</fullName>
            </value>
            <value>
                <fullName>EnVision 360</fullName>
            </value>
            <value>
                <fullName>Conformance Statements</fullName>
            </value>
            <value>
                <fullName>Financial Programs</fullName>
            </value>
            <value>
                <fullName>360 Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>