force-app/main/default/objects/Case/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Services &amp; Benefits</fullName>
            </value>
            <value>
                <fullName>Service Issue</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Establishment License</fullName>
            </value>
            <value>
                <fullName>Youth Theft</fullName>
            </value>
            <value>
                <fullName>Court Case</fullName>
            </value>
            <value>
                <fullName>Account Support</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>